@@ -691,6 +691,13 @@ own_ip_addr=127.0.0.1
 # 2 = required
 #ieee80211w=0
 
+# okc: Opportunistic Key Caching (aka Proactive Key Caching)
+# Allow PMK cache to be shared opportunistically among configured interfaces
+# and BSSes (i.e., all configurations within a single hostapd process).
+# 0 = disabled (default)
+# 1 = enabled
+#okc=1
+
 
 ##### IEEE 802.11r configuration ##############################################
 
