@@ -82,6 +82,6 @@ struct radius_class_data;
 
 void ieee802_1x_free_radius_class(struct radius_class_data *class);
 int ieee802_1x_copy_radius_class(struct radius_class_data *dst,
-				 struct radius_class_data *src);
+				 const struct radius_class_data *src);
 
 #endif /* IEEE802_1X_H */
